--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-redux": "^5.0.6",
     "react-scripts": "1.1.0",
     "redux": "^3.7.2",
+    "shortid": "^2.2.8",
     "styled-components": "^3.0.2"
   },
   "scripts": {
