--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "redux-actions": "^2.2.1",
     "redux-saga": "^0.16.0",
     "shortid": "^2.2.8",
-    "styled-components": "^3.0.2"
+    "styled-components": "^3.0.2",
+    "styled-media-query": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
