--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
     "redux-saga": "^0.16.0",
+    "semantic-ui-css": "^2.2.14",
+    "semantic-ui-react": "^0.77.2",
     "shortid": "^2.2.8",
     "styled-components": "^3.0.2",
     "styled-media-query": "^2.0.1"
