--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://devsnice.github.io/calldesk",
   "dependencies": {
     "formik": "^0.10.5",
+    "gh-pages": "^1.1.0",
     "grid-styled": "^2.0.0-11",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
