--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "calldesk",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://devsnice.github.io/calldesk",
   "dependencies": {
     "formik": "^0.10.5",
+    "gh-pages": "^1.1.0",
     "grid-styled": "^2.0.0-11",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -22,6 +24,8 @@
     "styled-media-query": "^2.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
