--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "test-coverage": "yarn test -- --coverage",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
